--- a/www/css/style.css
+++ b/www/css/style.css
@@ -17,9 +17,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 main {
+  flex-grow: 1;
+
   display: flex;
   flex-direction: column;
 
@@ -176,14 +179,11 @@ div.rock {
 
 /* Frontend Mentor footer styles, added absolute centered and white color */
 .attribution {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, -50%);
   font-size: 11px;
   text-align: center;
 
   color: white;
+  margin-bottom: 3px;
 }
 
 .attribution a {
@@ -194,11 +194,14 @@ div.rock {
   main {
     width: 100vw;
     height: 90vh;
+    padding: 0.5rem;
   }
 
   section#score {
     flex-direction: column;
     gap: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
   }
 
   section#game > div.option {
@@ -209,7 +212,12 @@ div.rock {
   /* Result Styles */
   .result-container {
     grid-template-columns: 1fr;
-    grid-template-rows: 12rem 1fr 12rem;
+    grid-template-rows: 10rem 1fr 10rem;
+  }
+
+  .result {
+    width: 8rem;
+    height: 8rem;
   }
 
   .result-option {
@@ -217,6 +225,6 @@ div.rock {
   }
 
   .result-text {
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
 }
